--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Anjok07 <68268275+Anjok07@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 altgraph = "0.17.3"
 audioread = "3.0.0"
 certifi = "2022.12.07"
@@ -46,6 +46,7 @@ onnx2pytorch = "^0.4.1"
 soundfile = {version = "0.11.0", markers = "sys_platform != \"darwin\""}
 pysoundfile = {version = "0.9.0.post1", markers = "sys_platform == \"darwin\""}
 numpy = "1.23.5"
+playsound = "^1.3.0"
 
 
 [build-system]
