Added detailed debug logging to all aspects of the MDX separation class

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ ultimatevocalremover/gui_data/cr_text.txt
 /lyrics/
 /.cache/
 /ultimatevocalremover/models/*/*.onnx
+*demucs_models.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
