--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "ultimatevocalremover"
-version = "5.6.0"
+version = "5.6.1"
 description = ""
 authors = ["Anjok07 <68268275+Anjok07@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.10,<4.0.0"
 altgraph = "0.17.3"
 audioread = "3.0.0"
 certifi = "2022.12.07"
