Added demucs dependency and fixed demucs code

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,7 @@ ultimatevocalremover/gui_data/cr_text.txt
 /tracks/
 /lyrics/
 /.cache/
-/ultimatevocalremover/models/*/*.onnx
-/ultimatevocalremover/models/*/*.pth
-/ultimatevocalremover/models/Demucs_Models/v3_v4_repo/demucs_models.txt
+/ultimatevocalremover/models/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
