--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ audioread = "3.0.0"
 certifi = "2022.12.07"
 cffi = "1.15.1"
 cryptography = "3.4.6"
-einops = "0.6.0"
+einops = "~0.7.0"
 future = "0.18.3"
 julius = "0.2.7"
 kthread = "0.2.3"
@@ -47,6 +47,8 @@ soundfile = {version = "0.11.0", markers = "sys_platform != \"darwin\""}
 pysoundfile = {version = "0.9.0.post1", markers = "sys_platform == \"darwin\""}
 numpy = "1.23.5"
 demucs = "^4.0.1"
+beartype = "^0.18.5"
+rotary-embedding-torch = "^0.6.1"
 
 [tool.poetry.scripts]
 uvr = 'ultimatevocalremover.UVR:main'
